chore: update dependencies

--- a/ux/package.json
+++ b/ux/package.json
@@ -11,36 +11,36 @@
     "build": "NODE_OPTIONS=--max-old-space-size=8192 vite build --emptyOutDir"
   },
   "dependencies": {
-    "@apollo/client": "3.11.8",
+    "@apollo/client": "3.13.1",
     "@lezer/common": "1.2.3",
     "@mdi/font": "7.4.47",
-    "@quasar/extras": "1.16.12",
-    "@simplewebauthn/browser": "11.0.0",
-    "@tiptap/core": "2.8.0",
-    "@tiptap/extension-code-block": "2.8.0",
-    "@tiptap/extension-code-block-lowlight": "2.8.0",
-    "@tiptap/extension-color": "2.8.0",
-    "@tiptap/extension-dropcursor": "2.8.0",
-    "@tiptap/extension-font-family": "2.8.0",
-    "@tiptap/extension-gapcursor": "2.8.0",
-    "@tiptap/extension-hard-break": "2.8.0",
-    "@tiptap/extension-highlight": "2.8.0",
-    "@tiptap/extension-history": "2.8.0",
-    "@tiptap/extension-image": "2.8.0",
-    "@tiptap/extension-mention": "2.8.0",
-    "@tiptap/extension-placeholder": "2.8.0",
-    "@tiptap/extension-table": "2.8.0",
-    "@tiptap/extension-table-cell": "2.8.0",
-    "@tiptap/extension-table-header": "2.8.0",
-    "@tiptap/extension-table-row": "2.8.0",
-    "@tiptap/extension-task-item": "2.8.0",
-    "@tiptap/extension-task-list": "2.8.0",
-    "@tiptap/extension-text-align": "2.8.0",
-    "@tiptap/extension-text-style": "2.8.0",
-    "@tiptap/extension-typography": "2.8.0",
-    "@tiptap/pm": "2.8.0",
-    "@tiptap/starter-kit": "2.8.0",
-    "@tiptap/vue-3": "2.8.0",
+    "@quasar/extras": "1.16.17",
+    "@simplewebauthn/browser": "13.1.0",
+    "@tiptap/core": "2.11.5",
+    "@tiptap/extension-code-block": "2.11.5",
+    "@tiptap/extension-code-block-lowlight": "2.11.5",
+    "@tiptap/extension-color": "2.11.5",
+    "@tiptap/extension-dropcursor": "2.11.5",
+    "@tiptap/extension-font-family": "2.11.5",
+    "@tiptap/extension-gapcursor": "2.11.5",
+    "@tiptap/extension-hard-break": "2.11.5",
+    "@tiptap/extension-highlight": "2.11.5",
+    "@tiptap/extension-history": "2.11.5",
+    "@tiptap/extension-image": "2.11.5",
+    "@tiptap/extension-mention": "2.11.5",
+    "@tiptap/extension-placeholder": "2.11.5",
+    "@tiptap/extension-table": "2.11.5",
+    "@tiptap/extension-table-cell": "2.11.5",
+    "@tiptap/extension-table-header": "2.11.5",
+    "@tiptap/extension-table-row": "2.11.5",
+    "@tiptap/extension-task-item": "2.11.5",
+    "@tiptap/extension-task-list": "2.11.5",
+    "@tiptap/extension-text-align": "2.11.5",
+    "@tiptap/extension-text-style": "2.11.5",
+    "@tiptap/extension-typography": "2.11.5",
+    "@tiptap/pm": "2.11.5",
+    "@tiptap/starter-kit": "2.11.5",
+    "@tiptap/vue-3": "2.11.5",
     "@vue/repl": "3.4.0",
     "@xterm/xterm": "5.5.0",
     "apollo-upload-client": "18.0.1",
@@ -51,19 +51,19 @@
     "dependency-graph": "1.0.0",
     "filesize": "10.1.6",
     "filesize-parser": "1.5.1",
-    "fuse.js": "7.0.0",
-    "graphql": "16.9.0",
+    "fuse.js": "7.1.0",
+    "graphql": "16.10.0",
     "graphql-tag": "2.12.6",
-    "highlight.js": "11.10.0",
+    "highlight.js": "11.11.1",
     "js-cookie": "3.0.5",
     "jwt-decode": "4.0.0",
-    "katex": "0.16.11",
+    "katex": "0.16.21",
     "lodash-es": "4.17.21",
-    "lowlight": "3.1.0",
+    "lowlight": "3.3.0",
     "luxon": "3.5.0",
     "markdown-it": "14.1.0",
     "markdown-it-abbr": "2.0.0",
-    "markdown-it-attrs": "4.2.0",
+    "markdown-it-attrs": "4.3.1",
     "markdown-it-decorate": "1.2.2",
     "markdown-it-emoji": "3.0.0",
     "markdown-it-expand-tabs": "1.0.13",
@@ -76,58 +76,61 @@
     "markdown-it-sup": "2.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mitt": "3.0.1",
-    "monaco-editor": "0.52.0",
+    "monaco-editor": "0.52.2",
     "pako": "2.1.0",
-    "pinia": "2.2.4",
-    "prosemirror-commands": "1.6.1",
+    "pinia": "3.0.1",
+    "prosemirror-commands": "1.7.0",
     "prosemirror-history": "1.4.1",
     "prosemirror-keymap": "1.2.2",
-    "prosemirror-model": "1.23.0",
-    "prosemirror-schema-list": "1.4.1",
+    "prosemirror-model": "1.24.1",
+    "prosemirror-schema-list": "1.5.0",
     "prosemirror-state": "1.4.3",
     "prosemirror-transform": "1.10.2",
-    "prosemirror-view": "1.34.3",
+    "prosemirror-view": "1.38.0",
     "pug": "3.0.3",
-    "quasar": "2.17.1",
+    "quasar": "2.18.0",
     "slugify": "1.6.6",
-    "socket.io-client": "4.8.0",
-    "sortablejs": "1.15.3",
+    "socket.io-client": "4.8.1",
+    "sortablejs": "1.15.6",
     "sortablejs-vue3": "1.2.11",
-    "tabulator-tables": "6.3.0",
+    "tabulator-tables": "6.3.1",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
-    "typescript": "5.6.3",
-    "uuid": "10.0.0",
-    "v-network-graph": "0.9.17",
-    "vue": "3.5.12",
-    "vue-i18n": "10.0.4",
-    "vue-router": "4.4.5",
+    "typescript": "5.8.2",
+    "uuid": "11.1.0",
+    "v-network-graph": "0.9.20",
+    "vue": "3.5.13",
+    "vue-i18n": "11.1.1",
+    "vue-router": "4.5.0",
     "vue3-otp-input": "0.5.21",
     "vuedraggable": "4.1.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@eslint/js": "9.13.0",
-    "@intlify/unplugin-vue-i18n": "5.2.0",
-    "@quasar/app-vite": "2.0.0-beta.24",
-    "@quasar/vite-plugin": "1.8.0",
-    "@types/lodash": "4.17.12",
-    "@vue/devtools": "7.5.2",
-    "@vue/language-plugin-pug": "2.1.6",
+    "@eslint/js": "9.21.0",
+    "@intlify/unplugin-vue-i18n": "6.0.3",
+    "@quasar/app-vite": "2.1.1",
+    "@quasar/vite-plugin": "1.9.0",
+    "@types/lodash": "4.17.16",
+    "@vue/devtools": "7.7.2",
+    "@vue/language-plugin-pug": "2.2.6",
     "autoprefixer": "10.4.20",
     "browserlist": "latest",
-    "eslint": "9.13.0",
+    "eslint": "9.21.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-n": "17.11.1",
-    "eslint-plugin-promise": "7.1.0",
-    "eslint-plugin-vue": "9.29.0",
+    "eslint-plugin-n": "17.15.1",
+    "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-vue": "9.32.0",
     "eslint-plugin-vue-pug": "0.6.2",
-    "neostandard": "0.11.6",
-    "sass": "1.80.3"
+    "neostandard": "0.12.1",
+    "sass": "1.85.1"
   },
   "engines": {
     "node": ">= 18.0",
     "npm": ">= 6.13.4"
+  },
+  "overrides": {
+    "typescript": "5.8.2"
   },
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
