chore: update dependencies

--- a/ux/package.json
+++ b/ux/package.json
@@ -11,7 +11,7 @@
     "build": "NODE_OPTIONS=--max-old-space-size=8192 vite build --emptyOutDir"
   },
   "dependencies": {
-    "@apollo/client": "3.13.1",
+    "@apollo/client": "3.13.5",
     "@lezer/common": "1.2.3",
     "@mdi/font": "7.4.47",
     "@quasar/extras": "1.16.17",
@@ -82,13 +82,13 @@
     "prosemirror-commands": "1.7.0",
     "prosemirror-history": "1.4.1",
     "prosemirror-keymap": "1.2.2",
-    "prosemirror-model": "1.24.1",
-    "prosemirror-schema-list": "1.5.0",
+    "prosemirror-model": "1.25.0",
+    "prosemirror-schema-list": "1.5.1",
     "prosemirror-state": "1.4.3",
-    "prosemirror-transform": "1.10.2",
-    "prosemirror-view": "1.38.0",
+    "prosemirror-transform": "1.10.3",
+    "prosemirror-view": "1.38.1",
     "pug": "3.0.3",
-    "quasar": "2.18.0",
+    "quasar": "2.18.1",
     "slugify": "1.6.6",
     "socket.io-client": "4.8.1",
     "sortablejs": "1.15.6",
@@ -100,30 +100,30 @@
     "uuid": "11.1.0",
     "v-network-graph": "0.9.20",
     "vue": "3.5.13",
-    "vue-i18n": "11.1.1",
+    "vue-i18n": "11.1.2",
     "vue-router": "4.5.0",
     "vue3-otp-input": "0.5.21",
     "vuedraggable": "4.1.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@eslint/js": "9.21.0",
-    "@intlify/unplugin-vue-i18n": "6.0.3",
-    "@quasar/app-vite": "2.1.1",
+    "@eslint/js": "9.23.0",
+    "@intlify/unplugin-vue-i18n": "6.0.5",
+    "@quasar/app-vite": "2.1.4",
     "@quasar/vite-plugin": "1.9.0",
     "@types/lodash": "4.17.16",
     "@vue/devtools": "7.7.2",
-    "@vue/language-plugin-pug": "2.2.6",
-    "autoprefixer": "10.4.20",
+    "@vue/language-plugin-pug": "2.2.8",
+    "autoprefixer": "10.4.21",
     "browserlist": "latest",
-    "eslint": "9.21.0",
+    "eslint": "9.23.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-n": "17.15.1",
+    "eslint-plugin-n": "17.16.2",
     "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-vue": "9.32.0",
-    "eslint-plugin-vue-pug": "0.6.2",
+    "eslint-plugin-vue": "10.0.0",
+    "eslint-plugin-vue-pug": "1.0.0-alpha.2",
     "neostandard": "0.12.1",
-    "sass": "1.85.1"
+    "sass": "1.86.0"
   },
   "engines": {
     "node": ">= 18.0",
