--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -358,16 +358,16 @@ jobs:
         token: ${{ github.token }}
         artifacts: 'drop/wiki-js.tar.gz,drop-win/wiki-js-windows.tar.gz'
 
-    - name: Notify Slack Releases Channel
-      uses: slackapi/slack-github-action@v1.26.0
-      with:
-        payload: |
-          {
-            "text": "Wiki.js ${{ github.ref_name }} has been released."
-          }
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+    # - name: Notify Slack Releases Channel
+    #   uses: slackapi/slack-github-action@v1.26.0
+    #   with:
+    #     payload: |
+    #       {
+    #         "text": "Wiki.js ${{ github.ref_name }} has been released."
+    #       }
+    #   env:
+    #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    #     SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
     - name: Notify Telegram Channel
       uses: appleboy/telegram-action@v0.1.1
