feat: Added ci tools and docker-compose.yml

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "watch": "NODE_OPTIONS=--openssl-legacy-provider webpack --config dev/webpack/webpack.dev.js",
     "test": "eslint --format codeframe --ext .js,.vue . && pug-lint server/views && jest",
     "cypress:open": "cypress open",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+
+    "service:start": "docker compose up -d",
+    "service:delete": "docker compose down -v",
+    "service:rebuild": "npm run service:delete && docker compose up --build --force-recreate"
   },
   "repository": {
     "type": "git",
