--- a/server/package.json
+++ b/server/package.json
@@ -36,70 +36,71 @@
     "node": ">=18.0"
   },
   "dependencies": {
-    "@apollo/server": "4.11.3",
-    "@azure/storage-blob": "12.27.0",
+    "@apollo/server": "5.0.0",
+    "@as-integrations/express5": "1.1.2",
+    "@azure/storage-blob": "12.28.0",
     "@exlinc/keycloak-passport": "1.0.2",
-    "@graphql-tools/schema": "10.0.23",
-    "@graphql-tools/utils": "10.8.6",
+    "@graphql-tools/schema": "10.0.25",
+    "@graphql-tools/utils": "10.9.1",
     "@hexagon/base64": "2.0.4",
-    "@joplin/turndown-plugin-gfm": "1.0.61",
-    "@node-saml/passport-saml": "5.0.1",
+    "@joplin/turndown-plugin-gfm": "1.0.62",
+    "@node-saml/passport-saml": "5.1.0",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
-    "@simplewebauthn/server": "13.1.1",
+    "@simplewebauthn/server": "13.1.2",
     "@vue-email/compiler": "0.8.14",
     "acme": "3.0.3",
     "akismet-api": "6.0.0",
     "aws-sdk": "2.1692.0",
     "bcryptjs": "3.0.2",
     "chalk": "5.4.1",
-    "cheerio": "1.0.0",
+    "cheerio": "1.1.2",
     "chokidar": "4.0.3",
     "chromium-pickle-js": "0.2.0",
     "clean-css": "5.3.3",
     "command-exists": "1.2.9",
-    "compression": "1.8.0",
+    "compression": "1.8.1",
     "connect-session-knex": "5.0.0",
     "cookie-parser": "1.4.7",
     "cors": "2.8.5",
-    "cron-parser": "5.0.6",
+    "cron-parser": "5.3.0",
     "cuint": "0.2.2",
     "custom-error-instance": "2.1.2",
     "dependency-graph": "1.0.0",
-    "diff": "7.0.0",
-    "diff2html": "3.4.51",
-    "dompurify": "3.2.4",
-    "dotize": "0.3.0",
+    "diff": "8.0.2",
+    "diff2html": "3.4.52",
+    "dompurify": "3.2.6",
+    "dotize": "0.6.0",
     "emoji-regex": "10.4.0",
     "eventemitter2": "6.4.9",
-    "express": "4.21.2",
+    "express": "5.1.0",
     "express-brute": "1.0.1",
-    "express-session": "1.18.1",
-    "file-type": "20.4.1",
-    "filesize": "10.1.6",
+    "express-session": "1.18.2",
+    "file-type": "21.0.0",
+    "filesize": "11.0.2",
     "fs-extra": "11.3.0",
     "getos": "3.2.1",
-    "graphql": "16.10.0",
+    "graphql": "16.11.0",
     "graphql-list-fields": "2.0.4",
     "graphql-rate-limit-directive": "2.0.6",
-    "graphql-tools": "9.0.18",
+    "graphql-tools": "9.0.20",
     "graphql-upload": "17.0.0",
     "gray-matter": "4.0.3",
     "he": "1.2.0",
     "highlight.js": "11.11.1",
-    "image-size": "2.0.1",
+    "image-size": "2.0.2",
     "js-base64": "3.7.7",
     "js-binary": "1.2.0",
     "js-yaml": "4.1.0",
-    "jsdom": "26.0.0",
+    "jsdom": "26.1.0",
     "jsonwebtoken": "9.0.2",
-    "katex": "0.16.21",
+    "katex": "0.16.22",
     "klaw": "4.1.0",
     "knex": "3.1.0",
     "lodash": "4.17.21",
     "lodash-es": "4.17.21",
-    "luxon": "3.5.0",
+    "luxon": "3.7.1",
     "markdown-it": "14.1.0",
     "markdown-it-abbr": "2.0.0",
     "markdown-it-attrs": "4.3.1",
@@ -109,21 +110,21 @@
     "markdown-it-footnote": "4.0.0",
     "markdown-it-imsize": "2.0.1",
     "markdown-it-mark": "4.0.0",
-    "markdown-it-mdc": "0.2.5",
+    "markdown-it-mdc": "0.2.6",
     "markdown-it-multimd-table": "4.2.3",
     "markdown-it-sub": "2.0.0",
     "markdown-it-sup": "2.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mathjax": "3.2.2",
-    "mime-types": "2.1.35",
+    "mime-types": "3.0.1",
     "ms": "2.1.3",
-    "multer": "1.4.5-lts.2",
+    "multer": "2.0.2",
     "nanoid": "5.1.5",
     "node-2fa": "2.0.3",
     "node-cache": "5.1.2",
-    "nodemailer": "6.10.0",
+    "nodemailer": "7.0.5",
     "objection": "3.1.5",
-    "octokit": "4.1.2",
+    "octokit": "5.0.3",
     "passport": "0.7.0",
     "passport-auth0": "1.4.4",
     "passport-cas": "0.1.1",
@@ -143,44 +144,43 @@
     "passport-slack-oauth2": "1.2.0",
     "passport-twitch-strategy": "2.2.0",
     "pem-jwk": "2.0.0",
-    "pg": "8.14.1",
+    "pg": "8.16.3",
     "pg-hstore": "2.3.4",
     "pg-pubsub": "0.8.1",
-    "pg-query-stream": "4.8.1",
+    "pg-query-stream": "4.10.3",
     "pg-tsquery": "8.4.2",
-    "poolifier": "4.4.5",
+    "poolifier": "5.1.0",
     "prom-client": "15.1.3",
     "punycode": "2.3.1",
-    "puppeteer-core": "24.4.0",
+    "puppeteer-core": "24.15.0",
     "qr-image": "3.2.0",
-    "remove-markdown": "0.6.0",
+    "remove-markdown": "0.6.2",
     "safe-regex": "2.1.1",
     "sanitize-filename": "1.6.3",
     "scim-query-filter-parser": "2.0.4",
-    "semver": "7.7.1",
-    "serve-favicon": "2.5.0",
-    "sharp": "0.33.5",
-    "simple-git": "3.27.0",
+    "semver": "7.7.2",
+    "serve-favicon": "2.5.1",
+    "sharp": "0.34.3",
+    "simple-git": "3.28.0",
     "socket.io": "4.8.1",
     "striptags": "3.2.0",
-    "tar-fs": "3.0.8",
+    "tar-fs": "3.1.0",
     "turndown": "7.2.0",
     "twemoji": "14.0.2",
-    "ufo": "1.5.4",
+    "ufo": "1.6.1",
     "uslug": "1.0.4",
     "uuid": "11.1.0",
     "validate.js": "0.13.1",
-    "vue": "3.5.13",
-    "xss": "1.0.15",
-    "yargs": "17.7.2"
+    "vue": "3.5.18",
+    "xss": "1.0.15"
   },
   "devDependencies": {
-    "eslint": "9.23.0",
-    "eslint-plugin-import": "2.31.0",
+    "eslint": "9.32.0",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "7.2.1",
-    "neostandard": "0.12.1",
-    "nodemon": "3.1.9"
+    "neostandard": "0.12.2",
+    "nodemon": "3.1.10"
   },
   "overrides": {
     "@graphql-tools/utils": "10.5.5"
