--- a/package.json
+++ b/package.json
@@ -191,7 +191,10 @@
     "validate.js": "0.13.1",
     "winston": "3.8.2",
     "xss": "1.0.14",
-    "yargs": "17.6.2"
+    "yargs": "17.6.2",
+    "vectra": "0.11.1",
+    "@themaximalist/embeddings.js": "0.1.3",
+    "@xenova/transformers": "2.17.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
