simplifying docker functionality

--- a/dev/containers/docker-compose.yml
+++ b/dev/containers/docker-compose.yml
@@ -52,6 +52,13 @@ services:
       - ../..:/wiki
       - /wiki/node_modules
       - /wiki/.git
+    tty: true
+    stdin_open: true
+    command: >
+      sh -c "
+        yarn install &&
+        yarn dev
+      "
 
 
 volumes:
