--- a/package.json
+++ b/package.json
@@ -339,7 +339,9 @@
   "resolutions": {
     "apollo-server-express/**/graphql-tools": "4.0.8",
     "graphql": "15.3.0",
-    "passport-saml/**/xml-crypto": "2.1.6"
+    "passport-saml/**/xml-crypto": "2.1.6",
+    "extract-files": "9.0.0"
+    
   },
   "browserslist": [
     "> 1%",
