--- a/server/modules/storage/digitalocean/definition.yml
+++ b/server/modules/storage/digitalocean/definition.yml
@@ -22,6 +22,7 @@ props:
       - sfo2.digitaloceanspaces.com
       - sfo3.digitaloceanspaces.com
       - sgp1.digitaloceanspaces.com
+      - tor1.digitaloceanspaces.com
     order: 1
   bucket:
     type: String
