The sanitising functionality for both html and SVG has been unified into a single file on both the client and server side. Second, a problem with the SVG output from the drawio has also been fixed. Last, it is possible to add a customised path for the drawio web application, which can be used for local hosting the application.

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -113,6 +113,9 @@ defaults:
     search:
       maxHits: 100
     maintainerEmail: security@requarks.io
+    drawio:
+      baseUrl: https://embed.diagrams.net/
+      sanitizing: true
 localeNamespaces:
   - admin
   - auth
