--- a/server/package.json
+++ b/server/package.json
@@ -125,6 +125,7 @@
     "nodemailer": "7.0.5",
     "objection": "3.1.5",
     "octokit": "5.0.3",
+    "pako": "2.1.0",
     "passport": "0.7.0",
     "passport-auth0": "1.4.4",
     "passport-cas": "0.1.1",
