--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "twemoji": "14.0.2",
     "uslug": "1.0.4",
     "uuid": "9.0.0",
+    "weaviate-client": "^3.10.0",
     "validate.js": "0.13.1",
     "winston": "3.8.2",
     "xss": "1.0.14",
