--- a/client/themes/default/theme.yml
+++ b/client/themes/default/theme.yml
@@ -27,12 +27,12 @@ props:
     default: true
     title: Display the Page Tags
     order: 3
-  showTags:
+  showAuthor:
     type: Boolean
     default: true
     title: Display the Page Author and Date
     order: 4
-  showTags:
+  showRating:
     type: Boolean
     default: true
     title: Display the Page Rating
