--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@azure/storage-blob": "12.29.1",
     "@exlinc/keycloak-passport": "1.0.2",
     "@joplin/turndown-plugin-gfm": "1.0.45",
+    "@node-saml/passport-saml": "5.1.0",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
@@ -153,7 +154,6 @@
     "passport-oauth2": "1.8.0",
     "passport-okta-oauth": "0.0.1",
     "passport-openidconnect": "0.1.2",
-    "passport-saml": "3.2.4",
     "passport-slack-oauth2": "1.2.0",
     "passport-twitch-strategy": "2.2.0",
     "patch-package": "8.0.1",
@@ -338,8 +338,7 @@
   },
   "resolutions": {
     "apollo-server-express/**/graphql-tools": "4.0.8",
-    "graphql": "15.3.0",
-    "passport-saml/**/xml-crypto": "2.1.6"
+    "graphql": "15.3.0"
   },
   "browserslist": [
     "> 1%",
