--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -113,6 +113,7 @@ defaults:
     search:
       maxHits: 100
     maintainerEmail: security@requarks.io
+    sessionClearInterval: 60000
 localeNamespaces:
   - admin
   - auth
